--- a/style.css
+++ b/style.css
@@ -11,7 +11,8 @@ body {
     max-width: 1200px;
     width: 100%;
     margin:  0 auto;
-    display: flex;justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 .container .left-side {
     width: 275px;
